[package]
name = "ddos"
version = "1.0.0-rc1"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
build = "build.rs"
opt-level = "z"
rust = "nightly-2017-12-01"

[dependencies]
libc = "0.2.33"
toml = "0.4"
clap = "2.26.2"
colored = "1.5"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
cmake = "0.1.27"
