[package]
name = "ddos"
version = "1.0.0-rc2"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
build = "build.rs"
license = "GPL-3.0-or-later"
opt-level = "z"

[dependencies]
libc = "0.2.33"
toml = "0.4"
clap = "2.23.3"
colored = "1.5"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
cmake = "0.1.27"
